# slurmhelper

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  versioneer.py
docs/: conf.py  example.rst  getting_started.rst  glossary.rst  guide.rst  index.rst  requirements.txt  spec_guidelines.rst  todos.rst  usage.rst
docs/source/: modules.rst  slurmhelper.cli.rst  slurmhelper.config.rst  slurmhelper.jobs.rst  slurmhelper.rst  slurmhelper.templates.rst  slurmhelper.utils.rst
docs/source/_autosummary/: slurmhelper.cli.rst  slurmhelper.config.rst  slurmhelper.jobs.rst  slurmhelper.utils.io.rst  slurmhelper.utils.misc.rst  slurmhelper.utils.reporting.rst  slurmhelper.utils.rst  slurmhelper.utils.time.rst
slurmhelper/: __init__.py
slurmhelper/cli/: __init__.py  command_line.py  parser.py
slurmhelper/config/: README.txt  __init__.py  rshrfmatlab.yml  rshrfmatlab_2021-06-01.yml  rshrfmatlab_2022-03-16.yml  rshrfmatlab_versions.yml  template_2022-03-17.yml
slurmhelper/config/rshrfmatlab/: rshrfmatlab_2021-06-01.yml  rshrfmatlab_2022-03-16.yml
slurmhelper/db/: __init__.py  classes.py
slurmhelper/jobs/: __init__.py  classes.py  cli_helpers.py  job.py  scriptwriter.py  submit.py  utils.py
slurmhelper/specs/: README.txt  __init__.py  rshrfmatlab_2022-03-16.yml  template_2022-03-17.yml  unifinished_code.py
slurmhelper/src/: _version.py
slurmhelper/templates/: __init__.py  custom_vars.py
slurmhelper/utils/: __init__.py  debug.py  io.py  misc.py  reporting.py  time.py
(+4 files in other folders)
