[options]
python_requires = >=3.9
install_requires =
    numpy==1.21.2
    pandas==1.2.4
    PyYAML==6.0
    progressbar2==4.0.0

packages = find:

[options.entry_points]
console_scripts =
    slurmhelper=slurmhelper.cli.command_line:main

# [options.package_data]
# slurmhelper =
#     data/*.*

[versioneer]
VCS = git
style = pep440
versionfile_source = slurmhelper/src/_version.py
versionfile_build = slurmhelper/src/_version.py
tag_prefix =
parentdir_prefix =